--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </p>
             </div>
             <img
-              src="../images/Mask_group.jpg"
+              src="./images/Mask_group.jpg"
               alt="Чоловік пекар дивиться на батони із посмішкою"
             />
           </div>
@@ -92,7 +92,7 @@
               <article class="chef-card">
                 <img
                   class="chef-photo"
-                  src="../images/nastya-chef.jpg"
+                  src="./images/nastya-chef.jpg"
                   alt="Nastya chef"
                 />
                 <div>
@@ -115,7 +115,7 @@
               <article class="chef-card">
                 <img
                   class="chef-photo"
-                  src="../images/vlad-chef.jpg"
+                  src="./images/vlad-chef.jpg"
                   alt="Vlad chef"
                 />
                 <div>
@@ -141,7 +141,7 @@
           <div class="formats-container">
             <button class="carousel-button" type="button">
               <svg width="16" height="16">
-                <use href="../images/icons.svg#icon-arrow"></use>
+                <use href="./images/icons.svg#icon-arrow"></use>
               </svg>
             </button>
             <ul class="formats-list">
@@ -199,7 +199,7 @@
             </ul>
             <button class="carousel-button next" type="button">
               <svg width="16" height="16">
-                <use href="../images/icons.svg#icon-arrow"></use>
+                <use href="./images/icons.svg#icon-arrow"></use>
               </svg>
             </button>
           </div>
@@ -317,14 +317,14 @@
               <li>
                 <a href="#">
                   <svg class="address-icon" width="32" height="32">
-                    <use href="../images/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#"></a>
                 <svg class="address-icon" width="32" height="32">
-                  <use href="../images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </li>
             </ul>
